--- a/styles/style.css
+++ b/styles/style.css
@@ -233,8 +233,7 @@ fieldset {
   align-items: center;
 }
 
-.search-form__checkbox:checked+
-.search-form__pseudo-checkbox::after {
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
   display: block;
   width: 15px;
   height: 15px;
