--- a/styles/style.css
+++ b/styles/style.css
@@ -304,7 +304,7 @@ fieldset {
   padding-right: 3px;
   margin-top: 1px;
 }
-.search-form__label:hover, 
+.search-form__label:hover 
 .search-form__label-text:hover {
   text-decoration: underline;
 }
